src/core/index/snapshots/writ__core__index__tests__parents_after_entry_2.snap
---
source: src/core/index/mod.rs
expression: actual

---
{
    "dir_1": {
        "dir_1/dir_2/second_level",
        "dir_1/dir_3/second_level",
    },
    "dir_1/dir_2": {
        "dir_1/dir_2/second_level",
    },
    "dir_1/dir_3": {
        "dir_1/dir_3/second_level",
    },
}
