src/core/index/snapshots/writ__core__index__tests__parses_sample.snap
---
source: src/core/index/mod.rs
expression: actual

---
{
    "dir_1/dir_2/second_level": Entry {
        oid: Oid {
            bytes: "e69de29bb2d1d6434b8b29ae775ad8c2e48c5391",
            type: "blob",
        },
        stat: Stat {
            ctime: SystemTime {
                tv_sec: 1619319620,
                tv_nsec: 781151612,
            },
            mtime: SystemTime {
                tv_sec: 1619319620,
                tv_nsec: 781151612,
            },
            dev: 64769,
            ino: 10756541,
            mode: Regular,
            uid: 1000,
            gid: 1000,
            size: 0,
        },
        flags: Flags {
            path_len: Exactly(
                24,
            ),
        },
        path: WsPath(
            "dir_1/dir_2/second_level",
        ),
    },
    "dir_1/dir_3/second_level": Entry {
        oid: Oid {
            bytes: "e69de29bb2d1d6434b8b29ae775ad8c2e48c5391",
            type: "blob",
        },
        stat: Stat {
            ctime: SystemTime {
                tv_sec: 1619319624,
                tv_nsec: 457208223,
            },
            mtime: SystemTime {
                tv_sec: 1619319624,
                tv_nsec: 457208223,
            },
            dev: 64769,
            ino: 10884356,
            mode: Regular,
            uid: 1000,
            gid: 1000,
            size: 0,
        },
        flags: Flags {
            path_len: Exactly(
                24,
            ),
        },
        path: WsPath(
            "dir_1/dir_3/second_level",
        ),
    },
    "top_level": Entry {
        oid: Oid {
            bytes: "e69de29bb2d1d6434b8b29ae775ad8c2e48c5391",
            type: "blob",
        },
        stat: Stat {
            ctime: SystemTime {
                tv_sec: 1619319578,
                tv_nsec: 788505984,
            },
            mtime: SystemTime {
                tv_sec: 1619319578,
                tv_nsec: 788505984,
            },
            dev: 64769,
            ino: 10627947,
            mode: Regular,
            uid: 1000,
            gid: 1000,
            size: 0,
        },
        flags: Flags {
            path_len: Exactly(
                9,
            ),
        },
        path: WsPath(
            "top_level",
        ),
    },
}
